# vsb-vyuka

./: .copilot-instructions.md  .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  _brand.yml  _quarto.yml  _variables.yml  conda-environment.yml  github-copilot.html  github-copilot.qmd  idg.html  idg.qmd  index.html  index.qmd  install.sh  linux-mint.html  linux-mint.qmd  linux_install_R.sh  listings.json  osgeo4w.html  osgeo4w.qmd  pdbs2.html  pdbs2.qmd  pgis2.html  pgis2.qmd  prepare_dev.sh  pyproject.toml  reveal-custom.scss  robots.txt  search.json  sitemap.xml  theme-dark.scss  theme-light.scss  vscode.html  vscode.qmd
.github/prompts/: kritika-skript.prompt.md
.github/workflows/: build_deploy.yaml  test_examples.yaml  test_postgresql_examples.yaml  test_python_examples.yaml  test_r_examples.yaml
IDG/: 02_uvod_r.qmd  03_data.qmd
IDG/prezentace/: 01_uvod.html  01_uvod.qmd  02_uvod_r.html  02_uvod_r.qmd  03_data.html  03_data.qmd  04_ggplot2.html  04_ggplot2.qmd  05_rmarkdown.html  05_rmarkdown.qmd  06_prostorova_data.html  06_prostorova_data.qmd  07_statisticke_modelovani.qmd  07_statisticke_testovani_a_modelovani.html  07_statisticke_testovani_a_modelovani.qmd  08_vybrané_statistické_metody.html  08_vybrané_statistické_metody.qmd  custom.scss
IDG/skripty/: 00_packages_install.R  01_ukazkovy_report.html  01_ukázkový_report.Rmd  01_ukázkový_report.html  02_qgis.R  05_faktorová_analýza.R  06_pca.R  07_shlukování.R  08_rozhodovací_stromy.R  description.yaml
PDBS2/prezentace/: 01_postgresql.qmd  01_uvod.html  01_uvod.qmd  02_postgresql.html  02_postgresql.qmd
PDBS2/skripty/: 01_install_postgis_check_version.sql  02_load_data_to_postgis.sh  03_load_csv.sql  04_tabulka_obyvatele.sql  04_tabulky_pro_import.sql  06_view.sql  07_create_fill_table.sql  09_geometry_scale.sql  description.yaml
PDBS2/soubory/: example_file.csv  postgresql-postgis-compose.yaml  run_examples.py  sql_scripts_runner.py
PGIS2/prezentace/: 01_uvod.html  01_uvod.qmd  02_opakovani_python.html  02_opakovani_python.qmd  03_gdal_ogr.html  03_gdal_ogr.qmd  04_fiona_rasterio_shapely.html  04_fiona_rasterio_shapely.qmd  05_funkce_tridy.html  05_funkce_tridy.qmd  06_pandas_polars.html
PGIS2/skripty/: 01_gdalogr.py  01_ogr.py  02_gdal.py  03_ogr_edit.py  04_fiona.py  05_rasterio_read.py  06_rasterio_copy_band.py  07_gdal_raster_operations.py  08_objekt.py  09_polars.py  description.yaml  utils.py
PGIS2/soubory/: conda-environment.yml  get_data.sh
_preview/: index.html  listings.json  search.json  sitemap.xml
_preview/descriptions/: python-traceback.html  python.html
_preview/subjects/: idg.html  pdbs2.html  (+3 more)
baliky/balik_pgis2/: README.md  pyproject.toml
baliky/balik_pgis2/src/balicekpgis2/: __init__.py  context_managers.py  data.py  paths.py
baliky/balik_pgis2/src/balicekpgis2/data/: ukazka.txt
baliky/balik_pgis2/tests/: test_paths.py
baliky/balik_pgis3/: pyproject.toml
baliky/balik_pgis3/tests/: test_balik.py
descriptions/: python-traceback.html  python-traceback.qmd  python.html  python.qmd
dev-scripts/: copy_conda_env.sh  pack_packages.sh
dev/balicekpgis2/: README.md  pyproject.toml
dev/balicekpgis2/src/balicekpgis2/: __init__.py  context_managers.py  data.py
dev/balik_pgis3/: pyproject.toml
dev/balik_pgis3/src/pgis3/: __init__.py  location.py  utils.py
dev/balik_pgis3/tests/: test_balik.py  test_ukazkovy.py
quarto-filters/: black-format.lua
scripts/: precommit-qmd-reveal-date.sh
subjects/: idg.html  idg.qmd  pdbs2.html  pdbs2.qmd  pgis2.html  pgis2.qmd  pgis3.html  pgis3.qmd  pvgis4.html  pvgis4.qmd  pvgis5.html  pvgis5.qmd
tools/: conda.html  conda.qmd  github-copilot.html  linux-mint.html  linux-mint.qmd  osgeo4w.html  osgeo4w.qmd  vscode.html  vscode.qmd
(+293 files in other folders)
