[project]
name = "pgis2"
version = "0.1.0"
description = "Testovací balíček pro předmětPGIS2"
authors = [{ "name" = "autor", "email" = "autor@email.cz" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdal>=3.10.0",
    "requests>=2.32.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/balicekpgis2"]
