[project]
name = "balicekpgis2"
version = "0.1.0"
description = "Pomocný balíček pro předmět PGIS2"
authors = [{ "name" = "autor", "email" = "autor@email.cz" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdal>=3.10.0",
    "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/balicekpgis2"]

[tool.hatch.build.targets.wheel.force-include]
"src/balicekpgis2/data" = "balicekpgis2/data"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/balicekpgis2 --cov-report=html"
