[project]
name = "balicekpgis2"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Caha",email = "jan.caha@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdal (>=3.8.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "balicekpgis2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
